# fastapi-react

./: .gitignore  README.md
backend/: pyproject.toml  requirements.txt
backend/app/: api.py
frontend/: package-lock.json  package.json
frontend/src/: index.js
